# HCD3100-8y

./: .clang-format  .gitignore  Kconfig  Makefile  README.md  git_mk_patch.sh  remove-deprecated-all.sh
components/: Kconfig
components/applications/: Kconfig
components/autoconf/: Config.in.host  autoconf.mk
components/automake/: Config.in.host  automake.mk
components/bluetooth/: Kconfig  bluetooth.mk
components/bluetooth/source/: CMakeLists.txt  bluetooth_weak.c
components/bluetooth/source/ac6955f/: ac6955fgx.c  ac6955frt.c  ac6956cgx.c
components/bluetooth/source/ad6956f/: ad6956f.c
components/bluetooth/source/inc/: bluetooth.h  bluetooth_io.h
components/cmds/: cmds.mk
components/ffmpeg/: 1006-ffmpeg-enable-speex.patch  Kconfig  Kconfig.plugins  Kconfig.plugins.decoders  Kconfig.plugins.demuxers  Kconfig.plugins.parsers  Kconfig.plugins.protocols  ffmpeg.mk  ffmpeg.mk.plugins
components/freetype/: freetype.mk
components/hc-examples/: Kconfig  hc-examples.mk
components/hc-examples/source/: Makefile  dis_test.c  dis_test.h  es_decoder.c  es_decoder.h  fdkaac_test.c  ffplayer_examples.c  ge_draw_subtitle.h  h264_es_player.c  hdmi_tx_test.c  hdmi_tx_test.h  meson.build  meson_options.txt  showlogo.h  toe_sample.c  trans_jpg_to_yuv_test.c  usb_cmds_main.c  vin_dvp_test.h
components/hc-examples/source/bluetooth/: Makefile  bluetooth_test.c
components/hc-examples/source/bootlogo_replace/: bootlogo_replace.c
components/hc-examples/source/ge/: Makefile  hcge_blit_test.c  hcge_display_rgb.c
components/hc-examples/source/gpio-map/: gpio.c  gpio.h  hc_gpio.h  io.h  pinmux.c  pinmux.h
components/hc-examples/source/hccast_test/: Makefile  hccast_test.h  hccast_test_com.c  usb_cast_test.c  wifi_cast_test.c
components/hc-examples/source/hdmi_rx/: Makefile  hdmi_cec.h  hdmi_rx_test.c
components/hc-examples/source/hdmi_wireless_display.raw/: jenc_rdo.c  tables.h
components/hc-examples/source/hdmi_wireless_display.tcp/: common.h  display_sink.c  display_source.c  jenc_rdo.c  jenc_rdo.h  tables-new.h  tables.h
components/hc-examples/source/hudi/: Makefile  hudi_cec_sample.c
components/hc-examples/source/pq_tool/: hc_pq_reg.c  hc_pq_reg.h
components/hc-examples/source/screenshot_test/: Makefile  screenshot.c
components/hc-examples/source/tv_decoder/: Makefile  tv_dec_test.c
components/hc-examples/source/v4l2loopback_latest/: pax_global_header
components/hc-examples/source/video_pbp/: Makefile  pbp_slot_mgr.c  pbp_slot_mgr.h  video_pbp_test.c  video_pbp_test.h
components/hccast/: Kconfig  hccast.mk
components/hclib/: Kconfig
components/hctinyplayer-registry/: Kconfig  hctinyplayer-registry.mk
components/hctinyplayer-registry/source/: .gitignore  CMakeLists.txt  README.md  hctinyplayer_registry.c  hctinyplayer_test.c
components/hudi/: Kconfig  hudi.mk
components/hudi/source/: CMakeLists.txt  README.md
components/hudi/source/audio/: hudi_adec.c  hudi_audio_inter.h  hudi_snd.c  hudi_snd_i2si.c
components/hudi/source/avsync/: hudi_avsync.c  hudi_avsync_inter.h
components/hudi/source/bluetooth/: hudi_bluetooth.c  hudi_bluetooth_ac6955fgx.c  hudi_bluetooth_ac6956cgx.c  hudi_bluetooth_inter.h
components/hudi/source/cec/: hudi_cec.c  hudi_cec_libcec.c  hudi_cec_libcec.h  hudi_cec_log.c  hudi_cec_log.h  hudi_cec_processor.c  hudi_cec_processor.h  hudi_cec_types.h
components/hudi/source/cec/adapter/: hudi_cec_adapter_communication.c  hudi_cec_adapter_communication.h
components/hudi/source/cec/utils/: hudi_cec_message.c  hudi_cec_message.h  hudi_cec_threadutils.c  hudi_cec_threadutils.h
components/hudi/source/common/: hudi_list.c  hudi_list.h  hudi_log.c  hudi_log.h
components/hudi/source/cvbsrx/: hudi_cvbsrx.c  hudi_cvbsrx_inter.h
components/hudi/source/display/: hudi_display.c  hudi_display_inter.h
components/hudi/source/dsc/: hudi_dsc.c  hudi_dsc_inter.h
components/hudi/source/examples/: hudi_cec_sample.c  hudi_flash_otp_sample.c
components/hudi/source/flash/: hudi_flash.c  hudi_flash_inter.h  hudi_flash_otp.c  hudi_flash_protect.c
components/hudi/source/hdmi/: hudi_hdmi.c  hudi_hdmi_inter.h
components/hudi/source/hdmirx/: hudi_hdmirx.c  hudi_hdmirx_inter.h  hudi_hdmirx_ms9601a.c
components/hudi/source/include/: hudi_adec.h  hudi_audsink.h  hudi_avsync.h  hudi_bluetooth.h  hudi_cec.h  hudi_com.h  hudi_cvbsrx.h  hudi_display.h  hudi_dsc.h  hudi_flash.h  hudi_hdmi.h  hudi_hdmirx.h  hudi_persistentmem.h  hudi_power.h  hudi_screen.h  hudi_snd.h  hudi_snd_i2si.h  hudi_vdec.h  hudi_vidsink.h
components/hudi/source/persistentmem/: hudi_persistentmem.c  hudi_persistentmem_inter.h
components/hudi/source/power/: hudi_power_inter.h  hudi_standby.c  hudi_watchdog.c
components/hudi/source/screen/: hudi_gpio_ctrl.c  hudi_gpio_ctrl.h  hudi_screen_backlight.c  hudi_screen_inter.h  hudi_screen_lcd.c  hudi_screen_lvds.c  hudi_screen_mipi.c  hudi_screen_pq.c
components/hudi/source/video/: hudi_vdec.c  hudi_video_inter.h  hudi_vidsink.c
components/kernel/: kernel.mk
components/ld/: ldscript-overlay.ld  ldscript.ld
components/libcurl/: libcurl.mk
components/libev/: Kconfig  libev.mk
components/liblvgl/: liblvgl.mk  liblvgl_1555.config  liblvgl_2fb.config  liblvgl_32b.config  liblvgl_projector_iptv.config
components/libogg/: libogg.mk
components/libssp/: Kconfig  libssp.mk
components/libtool/: Config.in.host  libtool.mk
components/libuac/: Kconfig  libuac.mk
components/libusb/: Kconfig
components/libuvc/: Kconfig  libuvc.mk
components/libvorbis/: libvorbis.mk
components/libwebsockets/: 0001-fix-compile-error-for-hcrtos.patch  libwebsockets.mk
components/m4/: Config.in.host
components/memtester/: 0001-fix-for-hcrtos.patch
components/opencore-amr/: opencore-amr.mk
components/opus/: 000-fixup-compile-error.patch  Kconfig  opus.mk
components/prebuilts/: Kconfig  (+1 more)
configs/: hichip_hc16xx_cb_d3100_v10_projector_c1_ak02_bl_defconfig  hichip_hc16xx_cb_d3100_v10_projector_c1_ak02_defconfig  hichip_hc16xx_cb_d3100_v10_projector_c1_ptv1_bl_defconfig  hichip_hc16xx_cb_d3100_v10_projector_c1_ptv1_defconfig
(+1711 files in other folders)
