option('display_sink', type : 'boolean', value : false)
option('display_source', type : 'boolean', value : false)
option('dsc', type : 'boolean', value : false)
option('wifi_test', type : 'boolean', value : false)
option('screenshot_test', type : 'boolean', value : false)
option('gpio_map_test', type : 'boolean', value : false)
option('hcge_test', type : 'boolean', value : false)
option('hudi_cec_test', type : 'boolean', value : false)
option('video_pbp_test', type : 'boolean', value : false)
option('cast_wifi_test', type : 'boolean', value : false)
option('cast_usb_test', type : 'boolean', value : false)
option('bluetooth_test', type : 'boolean', value : false)
option('hdmirx_test', type : 'boolean', value : false)
option('hdmirx_sorting_test', type : 'boolean', value : false)
option('tvdec_test', type : 'boolean', value : false)
option('AUTO_CONFIG_PATH', type : 'string', value : 'default')
